--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "graphql": "^16.7.1",
     "graphql-helix": "^1.13.0",
     "graphql-import-node": "^0.0.5",
-    "jsonwebtoken": "^9.0.1"
+    "graphql-subscriptions": "^2.0.0",
+    "jsonwebtoken": "^9.0.1",
+    "typed-graphql-subscriptions": "^0.0.1"
   }
 }
